# control_users_solution

./: README.md  Users.xlsx  Users_100000.xlsx  Users_3000.xlsx  pyproject.toml  reporte.csv  reporte.xlsx  reporte_entradas_comedor_20250819_203646.csv  reporte_entradas_comedor_20250821_121906.csv  reporte_entradas_comedor_20250822_140819.csv  usuarios_3000.csv  usuarios_3000.xlsx  visitas.db
src/: database.py  etiqueta.prn  main.py
src/assets/: Etiqueta.nlbl  compiler.iss  ticket.prn
src/components/: Alert.py  AppBar.py  Button.py  Container.py  TextField.py  Users.py
src/helpers/: helpers.py
