[project]
name = "Control usuarios"
version = "0.1.0"
description = "Aplicacion para el control de entradas y registros de usuarios."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Joel Trincado", email = "joetectronic@gmail.com" }
]
dependencies = [
    "flet==0.27.5",    # Flet para la interfaz de usuario
    "pandas",           # Si usas pandas para la manipulación de datos
    "qrcode",           # Si usas generación o escaneo de códigos QR (como para el registro de usuarios)
    "certifi",
]

[tool.flet]
org = "tectronic.mx"    # Nombre de la organización en notación de dominio invertido
product = "Control usuarios"  # Nombre de la app para Android/iOS
company = "Corporacion Tectronic"      # Nombre de la empresa
copyright = "Copyright (C) 2025 by Cherry Devs"  # Información de copyright

[tool.flet.app]
path = "src"  # Ruta del directorio donde se encuentra el código fuente

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",  # Dependencia de Flet para desarrollo con todos los extras
]

[tool.flet.app.boot_screen]
show = true
#message = "Cargando"

[tool.flet.splash]
color = "#0d47a1"       # claro
dark_color = "#121212"  # oscuro
web = false # --no-web-splash
ios = false # --no-ios-splash
android = true # --android-splash

[tool.flet.app.startup_screen]
show = false
message = "Starting up the app…"

[tool.poetry]
package-mode = false  # Desactivar el modo de paquete

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}  # Dependencia para desarrollo
